2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-scan.in:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.c:
	* tests/bugs/src/tester.h:
	  Improved scan logic. Fixes #411739.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* tests/bugs/src/tester.h:
	  Handle newline in declarations better. Fixes #379466.
	  Ensure space in multiline declarations when removing the newline.
	  Fix missing argument docs in template free build.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* gtkdoc-mktmpl.in:
	  Handle "unsigned long|unsigned short|signed long|signed short".
	  Fixes #445693.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* configure.in:
	* gtkdoc-check:
	* gtkdoc-check.in:
	  Replacing my shell based test script by Davids perl based one. Add
	  licence, copyright and docs header. Integrate with build.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-scangobj.in:
	  Make introspection of interfaces work in more cases. Fixes #355352.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* configure.in:
	  Cleanup glib detection for tests.

2007-08-11  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-check:
	  Fix modulename check.

2007-08-11  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	  Install new makefile.

	* configure.in:
	  Bump version as we're working on 1.9.

	* gtkdocize.in:
	  Add option to select makefile-flavour.

2007-08-11  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	  Add dummy rule to make first build run through. Fixes #156643

2007-08-11  Stefan Kost  <ensonic@users.sf.net>

	* style.css:
	  Hide fixed navigationbar when printing. Fixes #449618

2007-08-11  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.notmpl.make:
	  Add new makefile for tmpl-less build.

2007-08-11  Stefan Kost  <ensonic@users.sf.net>
