@@ -1,5 +1,12 @@
 2007-08-12  Stefan Kost  <ensonic@users.sf.net>
 
+	* tests/bugs/docs/tester-sections.txt:
+	* tests/bugs/src/tester.h:
+	  Add another test for a bug we fixed with the changes below.
+	  Fixes #460127.
+
+2007-08-12  Stefan Kost  <ensonic@users.sf.net>
+
 	* gtkdoc-scan.in:
 	* tests/bugs/docs/tester-sections.txt:
 	* tests/bugs/src/tester.c:
